# badgers

./: .gitignore  Cargo.toml  Makefile  README.md  action.yml  badgers-detailed-design.md  badgers-project-summary.md
.github/workflows/: coverage.yml  release-cli.yml
badgers/repos/devgony/badgers/commits/0289307a61a700e6d896519068a23278ee555c1f/: README.md  comparison.json.zst  coverage.json.zst
badgers/repos/devgony/badgers/commits/0289307a61a700e6d896519068a23278ee555c1f/html/: file-2.html  index.html
badgers/repos/devgony/badgers/commits/052a1922c0558d9d445bfd6db3293e429570c6c6/: README.md  comparison.json.zst  coverage.json.zst
badgers/repos/devgony/badgers/commits/052a1922c0558d9d445bfd6db3293e429570c6c6/html/: index.html
badgers/repos/devgony/badgers/commits/0c56e585b61a5ee734f0c1f3e643bd21e00ddfb0/: comparison.json.zst  coverage.json.zst
badgers/repos/devgony/badgers/commits/0c56e585b61a5ee734f0c1f3e643bd21e00ddfb0/html/: index.html
badgers/repos/devgony/badgers/commits/25884c3abf17e01962c4ce23e773e140ae9e5f5c/: README.md  comparison.json.zst  coverage.json.zst
badgers/repos/devgony/badgers/commits/25884c3abf17e01962c4ce23e773e140ae9e5f5c/html/: index.html
badgers/repos/devgony/badgers/commits/26e33aaf2c486e49da140f13be126c0639df610d/: comparison.json.zst  coverage.json.zst
badgers/repos/devgony/badgers/commits/26e33aaf2c486e49da140f13be126c0639df610d/html/: file-1.html  file-2.html
badgers/repos/devgony/badgers/commits/77d0fb0644ed33637ad61f36f2ab50531d2f50e3/: comparison.json.zst  coverage.json.zst
badgers/repos/devgony/badgers/commits/77d0fb0644ed33637ad61f36f2ab50531d2f50e3/html/: file-1.html
badgers/repos/devgony/badgers/commits/929ff1870a792127f50d1ed89ce9d5caa3a875cc/: README.md  comparison.json.zst  coverage.json.zst
badgers/repos/devgony/badgers/commits/929ff1870a792127f50d1ed89ce9d5caa3a875cc/html/: file-0.html  file-2.html
badgers/repos/devgony/badgers/commits/cd719aef7a934a0076c93fc0f3c1b18d6669249d/: README.md  comparison.json.zst  coverage.json.zst
badgers/repos/devgony/badgers/commits/fa359142988f14dd5cb4a90de299eba17af8bc07/: comparison.json.zst  coverage.json.zst
badgers/repos/devgony/badgers/prs/1/: latest.json
badgers/repos/devgony/badgers/prs/2/: README.md  latest.json
badgers/repos/devgony/badgers/prs/3/: latest.json
badgers/repos/devgony/badgers/prs/4/: latest.json
badgers/repos/devgony/badgers/prs/5/: README.md  latest.json
badgers/repos/devgony/badgers/prs/6/: latest.json
badgers/repos/devgony/badgers/prs/7/: README.md  latest.json
badgers/repos/devgony/badgers/refs/main/: README.md  latest.json
branch-main/: file-0.html  file-1.html  file-2.html  index.html
crates/badgers-cli/: Cargo.toml
crates/badgers-cli/src/: baseline_fetch.rs  cov.rs  diff.rs  flutter.rs  github_storage.rs  lib.rs  main.rs  python.rs  render.rs  report.rs  report_github.rs  report_markdown.rs  setup_gcs.rs  snapshot_push.rs  storage_opts.rs  summary.rs  view.rs
crates/badgers-cli/tests/: collect_flutter.rs  collect_python.rs  report_html.rs  report_markdown.rs  setup_gcs.rs  storage_flow.rs
crates/badgers-cli/tests/fixtures/: flutter_basic.lcov
crates/badgers-core/: Cargo.toml
crates/badgers-core/src/: compare.rs  diff.rs  lib.rs
crates/badgers-github/: Cargo.toml
crates/badgers-github/src/: lib.rs
crates/badgers-lcov/: Cargo.toml
crates/badgers-lcov/src/: lib.rs
crates/badgers-lcov/tests/: parse_lcov.rs
crates/badgers-lcov/tests/fixtures/: mixed_records.lcov  python_basic.lcov
crates/badgers-storage/: Cargo.toml
crates/badgers-storage/src/: gcs.rs  keys.rs  lib.rs  local.rs  pointer.rs
examples/python-sample/: .coveragerc  README.md
examples/python-sample/pkg/: calc.py
examples/python-sample/pkg/features/math/: advanced.py
examples/python-sample/tests/: test_advanced.py  test_calc.py
pr-1/: file-0.html  file-1.html  index.html
pr-2/: index.html
pr-3/: file-1.html  file-2.html  index.html
pr-5/: index.html
pr-7/: file-1.html  index.html
scripts/: install.sh  release.sh  release_helpers.sh  release_version.py  report_navigation.py  resolve_action_release.py  storage_retention.py  test_install.py  test_release_flow.py  test_release_version.py  test_report_navigation.py  test_resolve_action_release.py  test_storage_retention.py
skills/coverage-backfill/: SKILL.md
skills/fill-coverage/: SKILL.md
skills/fill-coverage-all/: SKILL.md
(+1 files in other folders)
