[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
badgers-core = { path = "crates/badgers-core" }
badgers-lcov = { path = "crates/badgers-lcov" }
badgers-storage = { path = "crates/badgers-storage" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

assert_cmd = "2"
predicates = "3"
