[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/devgony/badgers"

[workspace.dependencies]
badgers-core = { path = "crates/badgers-core", version = "0.1.0" }
badgers-github = { path = "crates/badgers-github", version = "0.1.0" }
badgers-lcov = { path = "crates/badgers-lcov", version = "0.1.0" }
badgers-storage = { path = "crates/badgers-storage", version = "0.1.0" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

assert_cmd = "2"
predicates = "3"
