[package]
name = "badge-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "badgers: PR line coverage checker for Python and Rust projects"
readme = "../../README.md"

[[bin]]
name = "badgers"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
badgers-core = { workspace = true }
badgers-lcov = { workspace = true }
badgers-github = { workspace = true }
badgers-storage = { workspace = true }
clap = { workspace = true }
jiff = { workspace = true }
serde_json = { workspace = true }
zstd = "0.13"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = "3.27.0"
